Fix privacy policy on mobile

--- a/src/styles/_additional_pieces.scss
+++ b/src/styles/_additional_pieces.scss
@@ -12,6 +12,10 @@
   }
 }
 
+.pt-12 {
+  @include pt(12);
+}
+
 .mt-8 {
   @include mt(8);
 
@@ -27,3 +31,7 @@
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   @include spaceY(2);
 }
+
+
+@import "md";
+@import "lg";
